--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
   "scripts": {
     "prebuild": "node-gyp rebuild",
     "build": "tsc",
-    "test": "node --napi-modules index.js"
+    "test": "node --napi-modules index.js",
+    "doc": "npx typedoc --plugin typedoc-plugin-markdown --excludePrivate --excludeNotExported",
+    "check": "gts check",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run check"
   },
   "author": "K. Johan Paulsson",
   "license": "MIT",
@@ -15,7 +23,13 @@
     "@types/node": "^14.0.23",
     "node-addon-api": "^3.0.1",
     "node-gyp": "^7.0.0",
-    "typescript": "^3.9.7"
+    "typedoc": "^0.18.0",
+    "typedoc-plugin-markdown": "^2.4.2",
+    "typescript": "^3.9.7",
+    "gts": "^2.0.2"
+  },
+  "engines": {
+    "node": ">=8.9.0"
   },
   "gypfile": true,
   "dependencies": {}
