--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "posttest": "npm run check"
   },
   "author": "K. Johan Paulsson",
-  "license": "MIT",
+  "license": "GPL-3.0-only",
   "devDependencies": {
     "@types/node": "^14.0.23",
     "node-addon-api": "^3.0.1",
