--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "it8951",
   "version": "0.0.1",
   "description": "Raspberry Pi nodejs module for e-papers controlled by IT8951",
+  "keywords": ["e-paper", "waveshare", "it8651", "bcm2853"],
   "main": "dist/it8951.js",
   "types": "dist/it8951.d.ts",
   "scripts": {
     "prebuild": "node-gyp rebuild",
     "build": "tsc",
     "test": "node --napi-modules index.js",
-    "doc": "npx typedoc --plugin typedoc-plugin-markdown --excludePrivate --excludeNotExported",
+    "doc": "npx typedoc --plugin typedoc-plugin-markdown --excludePrivate --excludeNotExported --stripInternal ",
     "check": "gts check",
     "clean": "gts clean",
-    "compile": "tsc",
     "fix": "gts fix",
-    "prepare": "npm run compile",
-    "pretest": "npm run compile",
+    "prepare": "npm run build",
+    "pretest": "npm run build",
     "posttest": "npm run check"
   },
   "author": "K. Johan Paulsson",
