--- a/package.json
+++ b/package.json
@@ -30,18 +30,18 @@
   },
   "license": "GPL-3.0-only",
   "devDependencies": {
-    "@types/node": "^14.0.23",
-    "node-gyp": "^7.0.0",
+    "@types/node": "^16.11.39",
+    "node-gyp": "^9.0.0",
     "typedoc": "^0.18.0",
     "typedoc-plugin-markdown": "^2.4.2",
-    "typescript": "^3.9.7",
-    "gts": "^2.0.2"
+    "typescript": "~4.7.3",
+    "gts": "^3.1.0"
   },
   "engines": {
     "node": ">=8.9.0"
   },
   "gypfile": true,
   "dependencies": {
-    "node-addon-api": "^3.0.1"
+    "node-addon-api": "^3.2.1"
   }
 }
