--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,5 @@
   "compilerOptions": {
     "outDir": "./dist"
   },
-  "include": [
-    "lib/**/*.ts",
-    "test/**/*.ts"
-  ]
+  "include": ["lib/**/*.ts", "test/**/*.ts"]
 }
